syntax = "proto3";

package grpc;

option go_package = "replication-go/grpc";

message Nothing {}
message Acknowledgement {}

message NodeInfo {
  // ip:port
  // i.e: 127.0.0.1:4356
  string connectionAddr = 1;
}

message Amount {
  NodeInfo nodeInfo = 1;
  uint32 amount = 2;
}

message Outcome {
  ClientBid bid = 1;
  bool isFinal = 2;
}

message ClientBid {
  string username = 1;
  uint32 amount = 2;
  string item = 3;
}


service AuctionService {
  // AUCTION RPC CALLS
  rpc Bid(ClientBid) returns (Acknowledgement);
  rpc Result(Nothing) returns (Outcome);

  rpc Ping(Nothing) returns (Nothing);
}

